opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      "Thomas Gazagnaire <thomas@gazagnaire.org>"
homepage:     "https://github.com/linuxkit/linuxkit"
bug-reports:  "https://github.com/linuxkit/linuxkit/issues"
license:      "Apache"
dev-repo:     "https://github.com/linuxkit/linuxkit.git"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder"  {build & >= "1.0+beta10"}
  "cstruct"
  "lwt"
  "logs"
  "astring"
  "mirage-time-lwt"
  "mirage-flow-lwt"
  "irmin-mem"
  "capnp-rpc-lwt"
  "rawlink"
  "tuntap" {= "1.0.0"}
  "ipaddr"
  "mirage-flow-rawlink"
  "mirage-net-fd"
  "charrua-client"
  "alcotest" {test}
]
